[project]
name = "research-rag-engine"
version = "0.1.0"
description = "Search and Ingestion layers"
authors = [
    {name = "Eish Chandeal",email = "eishchandeal25@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false